Add good and bad examples of aggregates