@@ -15,7 +15,7 @@
 	<name>ddd-training-v2</name>
 	<description>ddd-training-v2</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>19</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -74,6 +74,16 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin
 				</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>19</source>
+					<target>19</target>
+					<compilerArgs>--enable-preview
+					</compilerArgs>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
